emitter-service/target/classes/META-INF/fabric8/kubernetes/emitter-service-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    fabric8.io/git-commit: e8997fbaa2fe285612a028cd4e1753ef545b1039
    fabric8.io/git-branch: master
    fabric8.io/git-url: https://github.com/snandakumar87/emitter-service.git
  labels:
    app: emitter-service
    provider: fabric8
    version: 1.0.0.0
    group: fraud.demo
  name: emitter-service
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: emitter-service
      provider: fabric8
      group: fraud.demo
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: e8997fbaa2fe285612a028cd4e1753ef545b1039
        fabric8.io/git-branch: master
        fabric8.io/git-url: https://github.com/snandakumar87/emitter-service.git
      labels:
        app: emitter-service
        provider: fabric8
        version: 1.0.0.0
        group: fraud.demo
    spec:
      containers:
      - env:
        - name: BOOTSTRAP_SERVERS
          value: my-cluster-kafka-bootstrap:9092
        - name: PRODUCER_TOPIC
          value: incoming-transaction
        - name: SECURITY_PROTOCOL
          value: PLAINTEXT
        - name: SERIALIZER_CLASS
          value: fraud.analysis.demo.transaction.fraud.analysis.Serde.TransactionSerializer
        - name: ACKS
          value: "1"
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: emitter-service:1.0.0.0
        imagePullPolicy: IfNotPresent
        name: vertx
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        resources:
          limits:
            cpu: "1.0"
            memory: 500Mi
          requests:
            cpu: "0.2"
            memory: 500Mi
        securityContext:
          privileged: false
