emitter-service/target/classes/META-INF/fabric8/kubernetes/emitter-service-route.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: emitter-service
    provider: fabric8
    version: 1.0.0.0
    group: fraud.demo
  name: emitter-service
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: emitter-service
